lots of cursor. ios css has broke again but contact and collection page added

--- a/sections/BelowFold.liquid
+++ b/sections/BelowFold.liquid
@@ -9,8 +9,8 @@
         </p>
       </div>
       <div class="Hero-ctas">
-        <a href="sections\about" class="button learn-more">Discover More</a>
-        <a href="./collections" class="button shop-now">Purchase Peace</a>
+        <a href="#about" class="button learn-more">Discover More</a>
+        <a href="{{ routes.collections_url }}" class="button shop-now">Purchase Peace</a>
       </div>
     </div>
     <div class="BelowFoldRight">
