--- a/sections/contact-form.liquid
+++ b/sections/contact-form.liquid
@@ -49,3 +49,22 @@
     {% endform %}
   </div>
 </div>
+
+{% schema %}
+{
+  "name": "Contact Form",
+  "settings": [
+    {
+      "type": "text",
+      "id": "heading",
+      "label": "Heading",
+      "default": "Contact Us"
+    }
+  ],
+  "presets": [
+    {
+      "name": "Contact Form"
+    }
+  ]
+}
+{% endschema %}
